<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="ok">OK</string>
  <string name="general_error">Something went wrong</string>
  <string name="loading_description">Loading description</string>
</resources>
